# ros-demo

puzzle/: CMakeLists.txt  README.md  package.xml
puzzle/launch/: cv_camera.launch
puzzle/msg/: nb_pieces.msg  pieces_info.msg
puzzle/src/: pieces_info_pub.cpp  pieces_info_sub.cpp
